# AutoClashBot-cli

./: Cargo.toml  README.md
src/: acb.rs  acb_client.rs  main.rs
src/cli/: commandline.rs  mod.rs
src/cli/commands/: connect.rs  devices.rs  kill_server.rs  mod.rs  start_instance.rs  start_server.rs
src/server/: mod.rs  server.rs
src/server/commands/: connect.rs  devices.rs  mod.rs  start_instance.rs
